--- a/src/sections/hero.html
+++ b/src/sections/hero.html
@@ -7,8 +7,8 @@
       <img src="./images/vat_free_img.png" alt="vat" class="vat_free_img" />
     </div>
     <div class="vat_hero_content">
-      <h1 class="hero_heading">Είσαι επαγγελματίας;</h1>
-      <p class="hero_text">Εξοικονόμησε ΦΠΑ στις αγορές τεχνολογίας!</p>
+      <h2 class="hero_heading">Είσαι επαγγελματίας;</h2>
+      <h1 class="hero_text">Εξοικονόμησε ΦΠΑ στις αγορές τεχνολογίας!</h1>
     </div>
     <img src="./images/hero-arrow.svg" alt="vat" class="hero_arrow_img" />
 
